# wanted_kr_automation

./: .gitignore  .pylintrc  Makefile  pyproject.toml
src/: config.py  http_request.py  listing.py  logging.py  main.py  session.py  user_input.py
typings/: halo.pyi
wanted/: __init__.py  config.py  listing.py  main.py  profile.py  session.py  terminal.py  user_input.py
