[tool.poetry]
name = "wanted-kr-automation"
version = "0.1.0"
description = ""
authors = ["Stephan Malan <stephanmalan.rob@gmail.com>"]
readme = "README.md"
packages = [{include = "wanted_kr_automation"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^1.10.9"
pytz = "^2023.3"
tqdm = "^4.65.0"
halo = "^0.0.31"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
pylint = "^2.17.4"
ruff = "^0.0.272"
types-requests = "^2.31.0.1"
types-pytz = "^2023.3.0.0"
types-tqdm = "^4.65.0.1"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
mypy_path = "typings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
